Needs Improvement: Pass on paren vis to make caret visible here: `(|` + caret no longer disappears - clicking on a paren makes caret jump to start of handler (due to JS   assumptions about selection in appSupport?)

--- a/client/src/styles/_fluid.scss
+++ b/client/src/styles/_fluid.scss
@@ -15,19 +15,9 @@ $prec-colors: (#301728, #93385F, #4F3466, #9F6B99);
 
 .fluid-paren-open .fluid-inner {
   border-radius: 8px 0 0 8px;
-  width: 1ch;
-  position: absolute;
-  display: inline-block;
-  left: 0;
-  height: 16px;
 }
 .fluid-paren-close .fluid-inner {
   border-radius: 0 8px 8px 0;
-  width: 1ch;
-  position: absolute;
-  display: inline-block;
-  left: 0;
-  height: 16px;
 }
 
 .fluid-variant .live-values {
